# tele-home-supervisor

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  bot.py  coverage.txt  docker-compose.yml  pyproject.toml  requirements.txt  trivy.yaml
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  ci-cd.yml
tele_home_supervisor/: __init__.py  ai_delivery.py  ai_service.py  alerting.py  api_functions.py  background.py  charts.py  cli.py  commands.py  config.py  core.py  intel.py  logger.py  main.py  media.py  messages.py  network_inventory.py  notifications.py  piratebay.py  protondb.py  runtime.py  scheduled.py  services.py  state.py  tmdb.py  torrent.py  torrentsources.py  utils.py  view.py
tele_home_supervisor/handlers/: ai.py  alerts.py  audit.py  callbacks.py  cb_docker.py  cb_helpers.py  cb_media.py  cb_torrents.py  common.py  dispatch.py  docker.py  media.py  meta.py  network.py  notifications.py  system.py  torrents.py
tele_home_supervisor/models/: __init__.py  alerts.py  audit.py  auth.py  bot_state.py  cache.py  command_spec.py  debug.py  magnet.py  managed_host.py  metrics.py  network_inventory.py  persistence.py  (+4 more)
tests/: conftest.py  test_ai_ask_fallback.py  test_ai_formatting.py  test_ai_multimessage.py  test_ai_service_coverage.py  test_alerting.py  test_alerting_pure.py  test_auth.py  test_background_pure.py  test_background_shutdown.py  test_bot_state.py  test_callbacks_dispatch.py  test_callbacks_parsers.py  test_cb_media_parsers.py  test_check_auth.py  test_config.py  test_debug_command.py  test_dispatch_registry.py  test_dlogs_interactive.py  test_dlogs_pagination.py  test_handlers_ai_extended.py  test_handlers_alerts.py  test_handlers_audit.py  test_handlers_cb_media_coverage.py  test_handlers_cb_torrents_coverage.py  test_handlers_commands.py  test_handlers_common.py  test_handlers_docker_extended.py  test_handlers_media.py  test_handlers_meta.py  test_handlers_network_extended.py  test_handlers_notifications.py  test_handlers_notifications_extended.py  test_handlers_system_extended.py  test_handlers_torrents.py  test_handlers_torrents_extended.py  test_intel.py  test_main_logger.py  test_media.py  test_media_cleanup.py  (+19 more)
