[project]
name = "tele-home-supervisor"
version = "0.1.0"
description = "A Telegram bot for home server supervision."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "python-telegram-bot>=22.6",
    "psutil>=7.2.2",
    "docker>=7.1.0",
    "requests>=2.32.5",
    "urllib3>=2.7.0",
    "qbittorrent-api>=2025.11.1",
    "httpx>=0.27.0",
    "defusedxml>=0.7.1",
    "pyotp>=2.9.0",
    "pillow>=12.2.0",
    "qrcode[pil]>=8.2",
    "cloudscraper>=1.2.71",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff==0.15.1",
    "bandit>=1.9.3",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade (Python version upgrades)
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501", # line too long (handled by formatter)
    "S101", # use of assert (common in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["tele_home_supervisor"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"] # allow asserts and hardcoded-looking secrets in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=tele_home_supervisor --cov-report=term-missing --cov-fail-under=70"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
